# calculator

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  test_calculator.py
.circleci/: config.yml
.github/workflows/: python-app.yml
src/: calculator.py
tests/: test_calculator.py
